--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lucide-react": "^0.542.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-maps-api": "^2.19.3",
+    "@react-google-maps/api": "^2.19.3",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
